Archive2/ed/6b123120892e92/output
main.cpp:17:5: error: no matching function for call to 'foo'
    foo(s);
    ^~~
main.cpp:12:6: note: candidate function not viable: no known conversion from 'String' to 'Foo' for 1st argument
void foo(Foo) {}
     ^
1 error generated.
